--- a/backend/CloudShareAppAPI/src/main/resources/application.properties
+++ b/backend/CloudShareAppAPI/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/cloudshare
 
 server.servlet.context-path=/api/v1.0
 
-#spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.auto-index-creation=true
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 
@@ -19,3 +19,4 @@ spring.servlet.multipart.max-request-size=25MB
 #razorpay configuration
 #razorpay.key.id=ADD_YOUR_RAZORPAY_KEY
 #razorpay.key.secret=ADD_YOUR_RAZORPAY_SECRET
+
